# muzik-api

./: .gitignore  README.md  manage.py  pyproject.toml
jiosaavn/: apps.py  urls.py  views.py
music_api/: asgi.py  settings.py  urls.py  wsgi.py
muzik_api/: asgi.py  settings.py  urls.py  wsgi.py
