[tool.poetry]
name = "muzik-api"
version = "0.1.0"
description = "Free Personal Music API"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "muzik_api"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = "^4.1.7"
musicapy = "^2.0.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
